2007-09-15  Carlos Garnacho  <carlosg@gnome.org>

	* Users/Users.pm (add_user): adduser doesn't work as expected in
	Slackware, make sure we fallback to useradd for that distro. Spotted
	by Markus Kanet <<darkvision@gmx.info>

2007-09-14  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.4.0

2007-09-12  Markus Kanet  <darkvision@gmx.info>

	* Utils/Platform.pm: Add support for Bluewhite64.

2007-09-12  Carlos Garnacho  <carlosg@gnome.org>

	* SystemToolsBackends.pl.in: move some includes to
	* Utils/Backend.pm: here

2007-09-12  Carlos Garnacho  <carlosg@gnome.org>

	* Users/Users.pm (add_user): use abbreviated options for useradd, they
	seem to be more generic, and makes adding users work again for
	Slackware. Based on a patch by Markus Kanet <darkvision@gmx.info>. Bug
	#471083.

2007-09-06  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Backend.pm, Utils/Report.pm: unused code cleanup.
	* SystemToolsBackend.pl.in: update to Utils::Backend::init()
	parameters.

2007-09-03  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.3.2

2007-09-03  Carlos Garnacho  <carlosg@gnome.org>

	* Users/Shells.pm (get): get list of unique elements.

2007-08-29  Markus Kanet  <darkvision@gmx.info>

	* Init/Services.pm: Apply correctly the information for Slackware.
	Fixes GNOME Bug #471254.

2007-08-28  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.3.1

2007-08-28  Sasa Ostrouska  <saxa@droplinegnome.org>

	* Utils/Platform.pm: Support Slackware 11.0 and 12.0.

2007-08-27  Carlos Garnacho  <carlosg@gnome.org>

        * Utils/Backend.pm: make --platform work again

2007-08-27  Carlos Garnacho  <carlosg@gnome.org>

        * Init/Services.pm: Fixes for Slackware code.

2007-08-27  Carlos Garnacho  <carlosg@gnome.org>

        * Net-DBus/*: update to Net::DBus 0.33.5

2007-08-24  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_interface_parse_table)
	(get_interface_replace_table): Fix wireless settings parsing/saving
	for Slackware.
